--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- Wooden-tile palette -->
     <aside id="palette">
         <h2>Tiles</h2>
-        <div class="tile" data-module="sunrise">
+        <div class="tile" data-tile="sunrise">
             <span>Sunrise</span>
             <div class="grain"></div>
         </div>
@@ -88,7 +88,7 @@
     </aside>
 
     <!-- scripts -->
-    <script src="modules.js" type="module"></script>
+    <script src="tiles.js" type="module"></script>
     <script src="settings/wood-selector.js" type="module"></script>
 </body>
 
