--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!-- =================================================
-  Wooden Planner – Tangible Wood Block Interface (v0.8)
-  2025‑05‑08
-  * Consolidated modules for better maintainability
-  * Combined look and drag-and-drop into core modules system
-  * Fixed audio initialization and improved loading sequence
+  Vibes Board – Interactive Wood Burned UI (v0.2)
+  2023-09-29
+  * Implemented consistent styling between tiles and widgets
+  * Added burned wood SVG effect for a natural carved appearance
+  * Removed text labels for a cleaner minimal interface
+  * Enhanced drag-and-drop with smooth transitions and animations
 ================================================= -->
 
 <!doctype html>
@@ -11,7 +12,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Wooden Planner</title>
+    <title>Vibes Board</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
     <style>
