--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!-- =================================================
-  Vibes Board – Interactive Wood Burned UI (v0.2)
-  2023-09-29
+  Vibes Board – Interactive Wood Burned UI (v0.3)
+  2023-10-01
   * Implemented consistent styling between tiles and widgets
   * Added burned wood SVG effect for a natural carved appearance
   * Removed text labels for a cleaner minimal interface
   * Enhanced drag-and-drop with smooth transitions and animations
+  * Expanded tile collection with 30+ mood and atmosphere options
+  * Implemented wood-type based styling for consistent aesthetics
 ================================================= -->
 
 <!doctype html>
