--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!-- =================================================
-  Vibes Board – Interactive Wood Burned UI (v0.3)
-  2023-10-01
+  Vibes Board – Interactive Wood Burned UI (v0.4)
+  2023-10-02
   * Implemented consistent styling between tiles and widgets
   * Added burned wood SVG effect for a natural carved appearance
   * Removed text labels for a cleaner minimal interface
   * Enhanced drag-and-drop with smooth transitions and animations
   * Expanded tile collection with 30+ mood and atmosphere options
   * Implemented wood-type based styling for consistent aesthetics
+  * Added intuitive slot swapping functionality for rearrangement
+  * Fixed tile appearance issues with improved dragging state handling
 ================================================= -->
 
 <!doctype html>
