update message style

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!-- Main board -->
     <main id="panel" aria-label="Vibes Board">
         <!-- Message area -->
-        <div id="message-area"></div>
+        <div id="message-area"><span>Whisper into the wind...</span></div>
         
         <!-- Slots for tiles -->
         <div class="slot empty" data-slot="1"></div>
