--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         /* Panel layout with 3 horizontal slots */
         #panel {
             grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: 1fr auto;
+            grid-template-rows: 1fr minmax(120px, auto);
             grid-template-areas:
                 "slot1 slot2 slot3"
                 "message message message";
