--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!-- =================================================
-  Whisphered Wisdom – Interactive Wooden Oracle(v1.0)
+  Whisphered Wisdom – Interactive Wooden Oracle(v1.1)
   2025-05-08
   * Added interactive whisper message feature when three tiles are placed
   * Fixed message display to ensure text is never truncated
+  * Better message styling
 ================================================= -->
 
 <!doctype html>
